<resources>
    <string name="app_name">HealthPet</string>

    <string name="missyou">We miss you </string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="link_register">If you not account, register here</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="Welcome_to_healthpet">Welcome to HealthPet</string>
    <string name="Two_Step_Verification">Two-Step Verification</string>
    <string name="descVerification">A verification code has been sent to your notifications.</string>
    <string name="code">Enter the 6 digit code</string>
    <string name="btnVerification">Verify</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ricardo Flores</string>
    <string name="nav_header_subtitle">HealthPet</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Agregar nuevo Contacto</string>
    <string name="action_settings_home" translatable="false">Settings</string>
    <string name="action_eliminar">Delete Contact</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Contacts</string>
    <string name="menu_slideshow">Pets</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_rateus">Rate us</string>
    <string name="message">What did you think of the HealtPet app?</string>
    <string name="btn_rateus">Rate us Now!</string>

    <string name="title_date">My Dates</string>
    <string name="title_dates">View your appointment click here.</string>
    <string name="date">15/02/22</string>
    <string name="hour">15:00 pm</string>
    <string name="description">Appointment details if you are an all-week patient or if you have a special vaccine to administrer.</string>

    <string name="service">Service of the appointment</string>
    <string name="date_service">Date of appointment</string>
    <string name="time_appointment">Time of appointment</string>
    <string name="person">You name of onw the pet</string>
    <string name="person_name">Ricardo Flores</string>
    <string name="descr">Description</string>
    <string name="call">Modify</string>


    <string name="name_pet">Name of pet owner</string>
    <string name="remind">Remind me</string>
    <string name="shedule">Schedule the day and time</string>
    <string name="type">Type something here</string>
    <string name="calendar">Calendar</string>
    <string name="time">Time</string>
    <string name="save">Save the Date</string>

    <string name="name_owner1">Ramon Padilla</string>
    <string name="contacts">My Contacts</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="save_contact">Save the contact</string>

    <string name="contact">Contact</string>
    <string name="phone_num">4495777823</string>
    <string name="address_te">Dzilam 209 Infonavit M.</string>
    <string name="email_te">ricardo@gmail.com</string>

    <string name="name_pet_pets">Simba</string>
    <string name="name_pet_pets1">Name</string>
    <string name="race">Chihuahueño</string>
    <string name="age">4 years</string>
    <string name="weight">3 kg</string>
    <string name="race1">race</string>
    <string name="age1">age</string>
    <string name="weight1">Weight</string>
    <string name="name_own">Ricardo - </string>

    <string name="allergies">Allergies or recommendations</string>
    <string name="desc_allergies">The recommendations for the pet is not to be in the dust for too long  due to the infection it has.</string>
    <string name="tratments">Treatments</string>
    <string name="tablet1">Tablet #1 - 07:00 AM</string>
    <string name="tablet2">Tablet #2 - 02:00 PM</string>
    <string name="tablet3">Tablet #3 - 08:00 PM</string>
    <string name="clinical">Clinical History</string>
    <string name="date_clinical">March 09 2022</string>

    <string name="name_profile">Ricardo Flores</string>
    <string name="email_profile">ricardo1@gmail.com</string>
    <string name="password_profile">*********</string>
    <string name="phone_profile">4495777823</string>
    <string name="Save_profile">Save the data profile</string>

    <string name="BtnLanguage">Save the language</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>

    <string name="save_contact_boton">Save the contact</string>

    <string name="myappointment_activity">My appointments</string>
    <string name="mycontact_activity">My Contact</string>
    <string name="medicalhistory_activity">Clinical History</string>
    <string name="profile_activity">Profile</string>
    <string name="settings_activity">Settings</string>
    <string name="language_activity">Language</string>
    <string name="help_activity">Help</string>
    <string name="about_activity">About</string>
    <string name="programarcita_activity">Shedule appointment</string>

    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="aboutus">About us</string>
    <string name="logout">Logout</string>

    <string name="save_pet">Save pet</string>

    <string name="help_text">If you have problems with the application communicate through our WhatsApp service sending the screenshot along with your problem and we will solve it.</string>

    <string name="add_pet">Add Pet</string>
    <string name="settings">Settings</string>
    <string name="view_dates">View Dates</string>
    <string name="add_contact">Add Contact</string>
    <string name="shedule_appointment">Shedule Appointment</string>

    <string name="action_language">Language</string>

    <string name="title_activity_menu">HealthPet</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="comment">Add comment</string>
    <string name="sumbit_comment">Submit</string>
    <string name="btnCitas">View appointment</string>
    <string name="tips1">Tip</string>
    <string name="tip2_comment">Review your pending appointments on a daily basis</string>
    <string name="appointment">Appointments</string>
</resources>