<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="example.com.healthpetapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_Pets"
        android:name="example.com.healthpetapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_rateus"
        android:name="example.com.healthpetapp.ui.RateUs.RateFragment"
        android:label="@string/menu_rateus"
        tools:layout="@layout/fragment_rate" />

    <activity
        android:id="@+id/nav_Contacts"
        android:name="example.com.healthpetapp.ui.contactos.ContactsActivity"
        android:label="string/menu_gallery"
        tools:layout="@layout/activity_contacts" />
</navigation>