<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/register"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:fontFamily="@font/regular"
        android:lineHeight="38sp"
        android:text="@string/register"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:flow_verticalAlign="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:ems="50"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <EditText
        android:id="@+id/email"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:ems="50"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:ems="50"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:ems="50"
        android:hint="@string/phone"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/register"
        android:backgroundTint="#FFBA5C"
        app:cornerRadius="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

</androidx.constraintlayout.widget.ConstraintLayout>