<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/te_extra_am"
        android:layout_width="359dp"
        android:layout_height="80dp"
        android:layout_marginLeft="15dp"
        android:fontFamily="@font/regular"
        android:lineHeight="38sp"
        android:text="@string/missyou"
        android:textSize="27sp"
        android:textStyle="bold"
        app:flow_verticalAlign="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35sp" />

    <!-- Iniciar sesión -->
    <TextView
        android:id="@+id/login"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:fontFamily="@font/regular"
        android:text="@string/login"
        android:textSize="25sp"
        app:flow_verticalAlign="top"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/te_extra_am"
        android:layout_marginStart="15dp" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:ems="50"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:ems="50"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:backgroundTint="#FFBA5C"
        app:cornerRadius="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />


    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="65dp"
        android:text="@string/link_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout >