<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_pet">

    <TextView
        android:id="@+id/name_pet_pets"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:text="@string/name_pet_pets1"
        android:textSize="18sp"
        app:flow_verticalAlign="top"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/name_pet_pets_edit"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:ems="50"
        android:hint="@string/type"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_pet_pets" />

    <TextView
        android:id="@+id/race1"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:text="@string/race1"
        android:textSize="18sp"
        app:flow_verticalAlign="top"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_pet_pets_edit"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/race_pet_edit"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:ems="50"
        android:hint="@string/type"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/race1" />

    <TextView
        android:id="@+id/age_pets"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:text="@string/age1"
        android:textSize="18sp"
        app:flow_verticalAlign="top"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/race_pet_edit"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/age_pets_edit"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:ems="50"
        android:hint="@string/type"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_pets" />

    <TextView
        android:id="@+id/weight_pet"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:text="@string/weight1"
        android:textSize="18sp"
        app:flow_verticalAlign="top"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age_pets_edit"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/weight_pet_edit"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:ems="50"
        android:hint="@string/type"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_pet" />

    <Button
        android:id="@+id/btnSaveDate"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/save_pet"
        android:backgroundTint="#FFBA5C"
        app:cornerRadius="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_pet_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>