<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContact">

    <TextView
        android:id="@+id/name_pet"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="24sp"
        app:flow_verticalAlign="top"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:ems="50"
        android:hint="@string/type"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_pet" />

    <TextView
        android:id="@+id/ser"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="24sp"
        app:flow_verticalAlign="top"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/ser_text"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:ems="50"
        android:hint="@string/type"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ser" />

    <TextView
        android:id="@+id/des"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="24sp"
        app:flow_verticalAlign="top"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ser_text"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/desc_text"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:ems="50"
        android:hint="@string/type"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/des" />

    <TextView
        android:id="@+id/remi"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="24sp"
        app:flow_verticalAlign="top"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc_text"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/remind_text"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:ems="50"
        android:hint="@string/type"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remi" />

    <Button
        android:id="@+id/btnSaveDate"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/save"
        android:backgroundTint="#FFBA5C"
        app:cornerRadius="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remind_text" />


</androidx.constraintlayout.widget.ConstraintLayout>