<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwoStepVerification"
    android:background="@color/white">


    <TextView
        android:id="@+id/imgVerification"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/verification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/Two_Step_Verification"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgVerification"  />

    <TextView
        android:id="@+id/descVerification"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/descVerification"
        android:textSize="18dp"
        android:fontFamily="@font/regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVerification" />

    <EditText
        android:id="@+id/code"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:ems="50"
        android:hint="@string/code"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descVerification" />

    <Button
        android:id="@+id/btnVerification"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/btnVerification"
        android:backgroundTint="#FFBA5C"
        app:cornerRadius="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code" />

</androidx.constraintlayout.widget.ConstraintLayout>